<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.DestinationProfile">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/destinationImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/grey2"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/destinationProfileImage"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:contentDescription="@string/accessibility_text_destiny_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_collapseMode="parallax" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="bottom|end"
                android:layout_margin="14dp">

                <ImageView
                    android:id="@+id/destinationTourismProfileLevelOne"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/person_enabled"
                    android:backgroundTint="@color/white" />

                <ImageView
                    android:id="@+id/destinationTourismProfileLevelTwo"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/person_enabled"
                    android:backgroundTint="@color/white" />

                <ImageView
                    android:id="@+id/destinationTourismProfileLevelThree"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/person_enabled"
                    android:backgroundTint="@color/white" />

                <ImageView
                    android:id="@+id/destinationTourismProfileLevelFour"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/person_disabled"
                    android:backgroundTint="@color/white" />

                <ImageView
                    android:id="@+id/destinationTourismProfileLevelFive"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/person_disabled"
                    android:backgroundTint="@color/white" />

            </LinearLayout>

            <Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:popupTheme="?attr/colorPrimaryDark"
                app:layout_collapseMode="pin">

                <RelativeLayout
                    android:id="@+id/destinationProfileDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/destinationProfileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_extra_bold"
                        android:text="@string/profile_destination_example"
                        android:textColor="@color/custom_color_primary"
                        android:textSize="22sp"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/destinationProfileCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/destinationProfileName"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/profile_country_example"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <ImageButton
                        android:id="@+id/shareButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="10dp"
                        android:layout_toStartOf="@id/favoriteButton"
                        android:background="@color/transparent"
                        android:contentDescription="@string/accessibility_text_share_button"
                        android:src="@drawable/share"
                        app:tint="@color/white" />

                    <ImageButton
                        android:id="@+id/favoriteButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="10dp"
                        android:background="@color/transparent"
                        android:contentDescription="@string/accessibility_text_favorite_button"
                        android:src="@drawable/not_favorite"
                        app:tint="@color/white" />

                </RelativeLayout>
            </Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/profile_information_container"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/destinationProfileInformation"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/profile_information_container"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/aboutContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/about_title"
                    android:textAllCaps="true"
                    android:textColor="@color/grey2"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/destinationProfileAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/about_example"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/rounded_box"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/weather_title"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/destinationProfileWeather"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/weather_example"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/min_temperature_title"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/destinationProfileMinTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/min_temperature_example"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/max_temperature_title"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/destinationProfileMaxTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/max_temperature_example"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/average_cost_title"
                    android:textAllCaps="true"
                    android:textColor="@color/grey2"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_extra_bold"
                            android:text="@string/five_days"
                            android:textColor="@color/grey3"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/destinationProfileFiveDaysCost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/five_days_cost_example"
                            android:textColor="@color/grey2"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_extra_bold"
                            android:text="@string/seven_days"
                            android:textColor="@color/grey3"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/destinationProfileSevenDaysCost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/seven_days_cost_example"
                            android:textColor="@color/grey2"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_extra_bold"
                            android:text="@string/fifteen_days"
                            android:textColor="@color/grey3"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/destinationProfileFifteenDaysCost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/fifteen_days_cost_example"
                            android:textColor="@color/grey2"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/places_of_interest_title"
                    android:textAllCaps="true"
                    android:textColor="@color/grey2"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/placesOfInterestList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/place_of_interest_item" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
